--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "DB_Microservice"]
 	path = DB_Microservice
 	url = git@github.com:lexmarkCS499/DB_Microservice.git
+[submodule "ArgoCD-Configs"]
+	path = ArgoCD-Configs
+	url = git@github.com:lexmarkCS499/ArgoCD-Configs.git
