Updated the git modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "UI_Microservice"]
 	path = UI_Microservice
-	url = git@github.com:lexmarkCS499/UI_Microservice.git
+	url = https://github.com:lexmarkCS499/UI_Microservice.git
 [submodule "API_Microservice"]
 	path = API_Microservice
-	url = git@github.com:lexmarkCS499/API_Microservice.git
+	url = https://github.com/lexmarkCS499/API_Microservice.git 
 [submodule "DB_Microservice"]
 	path = DB_Microservice
-	url = git@github.com:lexmarkCS499/DB_Microservice.git
+	url = https://github.com:lexmarkCS499/DB_Microservice.git
 [submodule "ArgoCD-Configs"]
 	path = ArgoCD-Configs
-	url = git@github.com:lexmarkCS499/ArgoCD-Configs.git
+	url = https://github.com:lexmarkCS499/ArgoCD-Configs.git
