--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
   - ../DB_Microservice
 
 # Optionally, you can define common labels for all microservices here
-labels:
+commonLabels:
   app: my-app
