--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
           ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
         run: |
           if [ "${{ github.ref_name }}" == "dev" ]; then
-            ./argocd app sync dev-apiservice --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
+            ./argocd app sync my-app-api-service --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
           elif [ "${{ github.ref_name }}" == "staging" ]; then
             ./argocd app sync staging-apiservice --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
           elif [ "${{ github.ref_name }}" == "prod" ]; then
@@ -38,7 +38,7 @@ jobs:
           ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
         run: |
           if [ "${{ github.ref_name }}" == "dev" ]; then
-            ./argocd app sync dev-uiservice --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
+            ./argocd app sync my-app-ui-service --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
           elif [ "${{ github.ref_name }}" == "staging" ]; then
             ./argocd app sync staging-uiservice --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
           elif [ "${{ github.ref_name }}" == "prod" ]; then
@@ -51,7 +51,7 @@ jobs:
           ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
         run: |
           if [ "${{ github.ref_name }}" == "dev" ]; then
-            ./argocd app sync dev-db_microservice --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
+            ./argocd app sync my-app-mongo-db --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
           elif [ "${{ github.ref_name }}" == "staging" ]; then
             ./argocd app sync staging-db_microservice --server $ARGOCD_SERVER --auth-token $ARGOCD_TOKEN --grpc-web --prune
           elif [ "${{ github.ref_name }}" == "prod" ]; then
