--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main  # Run the workflow when code is pushed to the main branch
+      - dev
+      - staging
+      - prod
 
 jobs:
 
